--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "strapi-plugin-graphql": "^3.2.4",
     "strapi-plugin-upload": "3.2.4",
     "strapi-plugin-users-permissions": "3.2.4",
-    "strapi-utils": "3.2.4"
+    "strapi-utils": "3.2.4",
+    "stripe": "^8.119.0"
   },
   "author": {
     "name": "A Strapi developer"
